(executable
 (public_name moonsmith)
 (libraries core_kernel clap)
 ; Enable for debugging:
 ; (modes byte)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(env
 (dev
  (flags
   ; Make warnings non-fatal
   (:standard -warn-error -A)))
 (release
  (ocamlopt_flags :standard -ccopt -static)))
