(executable
 (public_name moonsmith)
 (libraries core_kernel clap fileutils)
 ; Enable for debugging:
 ; (modes byte)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))

(env
 (dev
  (flags
   ; Make warnings non-fatal
   (:standard -warn-error -A)))
 (release
  (ocamlopt_flags :standard -ccopt -static)))

(install
 (package moonsmith)
 (section share)
 (files (../lua/lib.lua as lua/lib.lua)))
